--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -1,4 +1,11 @@
-<mat-toolbar color="primary">
-    <span>Mon Application ANGULAR </span>
-</mat-toolbar>
+<h1>Bienvenue sur mon application High tech</h1>
 
+<nav class="nav-horizontal">
+  <div class="mask">
+    <ul class="list">
+      <li><a href="http://localhost:4200/">Accueil</a></li>
+      <li><a href="http://localhost:4200/produits">Produit</a></li>
+       <li><a href="http://localhost:4200/marques">Marque</a></li>
+    </ul>
+  </div>
+</nav>
