--- a/src/app/marque/pages/marque-list/marque-list.component.scss
+++ b/src/app/marque/pages/marque-list/marque-list.component.scss
@@ -2,3 +2,39 @@ table{
     width: 100%;
     background-color: blue;
 }
+.monbouton{
+    float:right;
+    margin:25px;
+    margin-right:5%;
+    padding:10px;
+    border-radius:10px;
+    border-color:#0082C3;
+    background-color:#ffea28;
+    color:#0082C3;
+}
+.test{
+    background-color:white;
+}
+th.mat-header-cell {
+    text-align: left;
+    background-color: #ffea28;
+    font-size:23px;
+    color:#0082C3;
+    font-family:Courier New, monospace;
+    text-align:center;
+    font-size:23px;
+}
+td.mat-cell.cdk-cell.cdk-column-id.mat-column-id {
+    background-color: #ffea28;
+    color:#0082C3;
+    font-family:Courier New, monospace;
+    text-align:center;
+
+}
+table.mat-table.cdk-table.mat-elevation-z8 {
+    width: 90%;
+    margin:auto;
+    text-align:center;
+    font-size:19px;
+    background-color:#0082c3;
+}
