--- a/src/app/produit/pages/produit-list/produit-list.component.html
+++ b/src/app/produit/pages/produit-list/produit-list.component.html
@@ -16,6 +16,11 @@
     <td mat-cell *matCellDef="let produit">{{ produit.capacite }}</td>
   </ng-container>
 
+    <ng-container matColumnDef="couleur">
+    <th mat-header-cell *matHeaderCellDef>Couleur</th>
+    <td mat-cell *matCellDef="let produit">{{ produit.couleur }}</td>
+  </ng-container>
+
   <ng-container matColumnDef="update">
     <th mat-header-cell *matHeaderCellDef></th>
     <td mat-cell *matCellDef="let produit">
@@ -44,6 +49,6 @@
   <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
 </table>
 
-<button mat-fab color="warn" (click)="openDialog(false, undefined)">
-  <mat-icon>add</mat-icon>
+<button (click)="openDialog(false, undefined)" class="monbouton">
+  Ajouter un telephone
 </button>
